extends Node

@onready var sfx_uitone_excited: AudioStreamPlayer = $SFX_UITONE_Excited
@onready var sfx_uitone_talking: AudioStreamPlayer = $SFX_UITONE_Talking
@onready var sfx_uitone_thinking: AudioStreamPlayer = $SFX_UITONE_Thinking
@onready var sfx_uitone_whisper: AudioStreamPlayer = $SFX_UITONE_Whisper
@onready var sfx_uitone_yelling: AudioStreamPlayer = $SFX_UITONE_Yelling
@onready var sfx_uitone_boop_left: AudioStreamPlayer = $SFX_UITONE_BoopLeft
@onready var sfx_uitone_boop_right: AudioStreamPlayer = $SFX_UITONE_BoopRight
@onready var sfx_uitone_chime_penny: AudioStreamPlayer = $SFX_UITONE_Chime_Penny
@onready var sfx_uitone_chime_trista: AudioStreamPlayer = $SFX_UITONE_Chime_Trista
@onready var music_ambient_theme_1: AudioStreamPlayer = $Music_AmbientTheme_1
@onready var music_ambient_theme_2: AudioStreamPlayer = $Music_AmbientTheme_2
@onready var music_ambient_theme_3: AudioStreamPlayer = $Music_AmbientTheme_3
@onready var music_ambient_theme_4: AudioStreamPlayer = $Music_AmbientTheme_4
